Clean ups to address warnings reported by FindBugs.
Much of this is removing unused variables, touching up certain usage patterns to avoid unnecessary
inefficiencies.

None of this should make any noticeable difference, I don't think.

-- Jon